--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,10 @@
         "phpspec/phpspec": "^5.1"
     },
     "autoload": {
-        "files": [ "vendor/autoload.php" ]
-    },
-    "autoload-dev": {
         "psr-4": {
-            "Kata\\": "src/",
+            "": "src/",
             "spec\\": "spec/"
-        }    
+        },
+        "files": [ "vendor/autoload.php" ]
     }
 }
